Fix: right aligned numbers in masthead search

--- a/app/assets/stylesheets/masthead.css.scss
+++ b/app/assets/stylesheets/masthead.css.scss
@@ -171,3 +171,6 @@
     color: black;
   }
 }
+ul.ui-autocomplete li .hits {
+  float: right;
+}
